improved departments added DB conection